# legge-vm

./: .gitignore  Cargo.toml  README.md  main.bc  prelude.bc  prepare.sh  profile.sh
.github/workflows/: rust.yml
benches/: interp.rs
dev/: Cargo.toml  rustfmt.toml
dev/src/: ast.rs  ast_builder.rs  checker.rs  linker.rs  main.rs  token.rs
dev/src/ast/: iterator.rs  macros.rs  mod.rs  node.rs
dev/src/node/: ast_node.rs  block.rs  expression.rs  iterator.rs  loop.rs  macros.rs  mod.rs  node_id.rs  statement.rs  variable.rs
dev/src/node/expression/: block.rs  const_value.rs  expr_chain.rs  (+7 more)
dev2/: Cargo.toml
dev2/src/: ast.rs  checker.rs  children.rs  legge_vm.rs  leggevm.rs  linker.rs  macros.rs  main.rs  state.rs  tree_builder.rs  types.rs
dev2/src/node/: mod.rs  variable.rs
examples/: associated_functions.bc  main.bc  prelude.bc
examples/dir/: file.bc  file2.bc
macros/: Cargo.toml
macros/src/: lib.rs
shell_scripts/: prepare.sh  profile.sh
src/: ast.rs  bytecode.rs  foreign_functions.rs  interpreter.rs  lib.rs  main.rs  runtime.rs  sdl.rs  testing.rs  token.rs
src/ast/: ast.rs  checker.rs  linker.rs  mod.rs  nodebody.rs  parser.rs  treeshaker.rs  typer.rs
src/debug/: mod.rs
src/vm/: bytecode.rs  compiler.rs  debug.rs  filestore.rs  interpreter.rs  mod.rs  parser.rs  runtime.rs  token.rs
src/vm/ast/: ast.rs  error.rs  mod.rs  nodebody.rs  state.rs
src/vm/transform/: builder.rs  check_transform.rs  infertype_transform.rs  link_transform.rs  main_transform.rs  mod.rs  token_to_ast.rs  treeshake_transform.rs
tests/: inline.rs  interp.rs
(+35 files in other folders)
