[package]
edition = "2021"
name = "leggevm"
version = "0.1.0"
authors = ["Rikard Legge <rikard@legge.se>"]

[dependencies]
colored = "2"
tokio = { version = "1.13.0", features = ["full"] }

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "interp"
harness = false

[profile.release]
debug = true