[package]
edition = "2021"
name = "leggevm"
version = "0.1.0"
authors = ["Rikard Legge <rikard@legge.se>"]

[dependencies]
colored = "2"
tokio = { version = "1.13", features = ["rt-multi-thread", "io-util", "sync", "fs"] }
clap = "3.0.0-beta.5"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "interp"
harness = false

[profile.release]
debug = true